--- a/src/views/contact/contact.hbs
+++ b/src/views/contact/contact.hbs
@@ -1,6 +1,8 @@
 <p><i class="fas fa-home"></i> Timișoara, Simion Bărnuțiu, 9</p>
 <p><i class="fas fa-phone"></i> 0256 208 318 (tel/fax)</p>
 <p><i class="fas fa-envelope"></i> scoala21tm@yahoo.com</p>
+<p><i class="fas fa-info-circle"></i> program secretariat: L-V (11-13)</p>
+<p><i class="fas fa-user-tie"></i> audiente director: L (12-14), J (9-11)</p>
 
 <div style="width:100%; height:400px;" id="mapCT" class="google-map"></div>
 
