--- a/src/views/staff/staff.hbs
+++ b/src/views/staff/staff.hbs
@@ -1,7 +1,7 @@
 <h3>Directori:</h3>
 <ul>
     <li> prof. <strong>Daniela Maran</strong>, director </li>
-    <li> prof. pt. inv. primar <strong>Liliana Boitiu</strong>, director adjunct </li>
+    <li> prof. inv. primar <strong>Liliana Boitiu</strong>, director adjunct </li>
 </ul>
 
 <h3>Consiliul de administratie:</h3>
