--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -29,12 +29,13 @@ if 2 similar sections are used, the last one will override the first one --}}
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/revista-scolii' )}} active {{/if}}" href="#">Repere
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/repere-istorice' )}} active {{/if}}" href="/repere-istorice">Repere
                             istorice</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/revista-scolii' )}} active {{/if}}" href="#">Vicentiu
-                            Babes</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/matemaraton' )}} active {{/if}}" href="/matemaraton">Elevi
-                            de prestigiu</a>
+                        {{!-- <a class="dropdown-item {{#if (eq selectedTopMenu '/revista-scolii' )}} active {{/if}}"
+                            href="#">Vicentiu
+                            Babes</a> --}}
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/elevi-de-prestigiu' )}} active {{/if}}"
+                            href="/elevi-de-prestigiu">Elevi de prestigiu</a>
 
                     </div>
                 </li>
@@ -45,22 +46,29 @@ if 2 similar sections are used, the last one will override the first one --}}
                         Inscriere
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/rezultate' )}} active {{/if}}" href="#">Ziua
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/ziua-portilor-deschise' )}} active {{/if}}"
+                            href="/ziua-portilor-deschise">Ziua
                             Portilor Deschise</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/rezultate' )}} active {{/if}}" href="#">Planul
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/planul-de-scolarizare' )}} active {{/if}}"
+                            href="/planul-de-scolarizare">Planul
                             de scolarizare</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/orar' )}} active {{/if}}" href="#">Circumscriptie</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/transfer' )}} active {{/if}}" href="#">Criterii
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/circumscriptie' )}} active {{/if}}" href="/circumscriptie">Circumscriptie</a>
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/criterii-specifice-de-departajare' )}} active {{/if}}"
+                            href="criterii-specifice-de-departajare">Criterii
                             specifice de departajare</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/rezultate' )}} active {{/if}}" href="#">Orarul
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/orarul-pentru-inscriere' )}} active {{/if}}"
+                            href="/orarul-pentru-inscriere">Orarul
                             pentru inscriere</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/rezultate' )}} active {{/if}}" href="#">Acte
-                            necesare inscrierii</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/clase' )}} active {{/if}}" href="#">Procedura
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/acte-necesare-pentru-inscriere' )}} active {{/if}}"
+                            href="/acte-necesare-pentru-inscriere">Acte
+                            necesare pentru inscriere</a>
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/procedura-de-repartizare-pe-clase' )}} active {{/if}}"
+                            href="/procedura-de-repartizare-pe-clase">Procedura
                             de repartizare pe clase</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/rezultate' )}} active {{/if}}" href="#">Scoala
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/scoala-dupa-scoala' )}} active {{/if}}"
+                            href="/scoala-dupa-scoala">Scoala
                             dupa scoala</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/rezultate' )}} active {{/if}}" href="#">Imagini
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/imagini-din-clase' )}} active {{/if}}" href="/imagini-din-clase">Imagini
                             din clase</a>
 
 
@@ -75,11 +83,15 @@ if 2 similar sections are used, the last one will override the first one --}}
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/clase' )}} active {{/if}}" href="#">Metodologie</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/orar' )}} active {{/if}}" href="#">Calendar</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/transfer' )}} active {{/if}}" href="#">Rezultate
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/metodologie-evaluare-nationala' )}} active {{/if}}"
+                            href="/metodologie-evaluare-nationala">Metodologie</a>
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/calendar-evaluare-nationala' )}} active {{/if}}"
+                            href="/calendar-evaluare-nationala">Calendar</a>
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/rezultate-simulare-evaluare-nationala' )}} active {{/if}}"
+                            href="/rezultate-simulare-evaluare-nationala">Rezultate
                             simulare EN</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/rezultate' )}} active {{/if}}" href="#">Rezultate
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/rezultate-evaluare-nationala' )}} active {{/if}}"
+                            href="/rezultate-evaluare-nationala">Rezultate
                             EN</a>
                     </div>
                 </li>
@@ -97,8 +109,8 @@ if 2 similar sections are used, the last one will override the first one --}}
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item {{#if (eq selectedTopMenu '/profesori' )}} active {{/if}}" href="/profesori">Profesori
                         </a>
-                        <a class="dropdown-item" href="#">Personal didactic auxiliar</a>
-                        <a class="dropdown-item" href="#">Personal nedidactic</a>
+                        <a class="dropdown-item" href="/personal-auxiliar">Personal auxiliar</a>
+                        {{!-- <a class="dropdown-item" href="#">Personal nedidactic</a> --}}
                         <div class="dropdown-divider"></div>
 
                         <a class="dropdown-item {{#if (eq selectedTopMenu '/conducere' )}} active {{/if}}" href="/conducere">Echipa
@@ -106,7 +118,7 @@ if 2 similar sections are used, the last one will override the first one --}}
                         </a>
 
                         {{!-- <a class="dropdown-item" href="#">Consiliul de administratie</a> --}}
-                        <a class="dropdown-item" href="#">Comisii</a>
+                        <a class="dropdown-item" href="/comisii">Comisii</a>
                     </div>
                 </li>
 
@@ -126,27 +138,28 @@ if 2 similar sections are used, the last one will override the first one --}}
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/clase' )}} active {{/if}}" href="#">Clase</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/orar' )}} active {{/if}}" href="#">Orar</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/transfer' )}} active {{/if}}" href="#">Transfer</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/rezultate' )}} active {{/if}}" href="#">Rezultate
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/clase' )}} active {{/if}}" href="/clase">Clase</a>
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/orar-elevi' )}} active {{/if}}" href="/orar-elevi">Orar</a>
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/transfer-elevi' )}} active {{/if}}" href="/transfer-elevi">Transfer</a>
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/rezultate-olimpiade' )}} active {{/if}}"
+                            href="/rezultate-olimpiade">Rezultate
                             olimpiade</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/rezultate' )}} active {{/if}}" href="#">Burse</a>
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/burse-elevi' )}} active {{/if}}" href="/burse-elevi">Burse</a>
                     </div>
                 </li>
 
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown {{#if (eq selectedTopMenu '/matemaraton' )}} active {{/if}}">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
                         Proiecte
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/revista-scolii' )}} active {{/if}}" href="#">Revista
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/revista-scolii' )}} active {{/if}}" href="/revista-scolii">Revista
                             scolii</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/revista-scolii' )}} active {{/if}}" href="#">Eco
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/eco-scoala' )}} active {{/if}}" href="/eco-scoala">Eco
                             Scoala</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/biblioteca' )}} active {{/if}}" href="#">Biblioteca</a>
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/biblioteca' )}} active {{/if}}" href="/biblioteca">Biblioteca</a>
                         <a class="dropdown-item {{#if (eq selectedTopMenu '/matemaraton' )}} active {{/if}}" href="/matemaraton">MateMaraton</a>
 
                     </div>
@@ -159,23 +172,18 @@ if 2 similar sections are used, the last one will override the first one --}}
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/revista-scolii' )}} active {{/if}}" href="#">Hotarari
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/hotarari-ca' )}} active {{/if}}" href="/hotarari-ca">Hotarari
                             CA</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/revista-scolii' )}} active {{/if}}" href="#">Budget</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/revista-scolii' )}} active {{/if}}" href="#">Venituri
-                            salariale</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/biblioteca' )}} active {{/if}}" href="#">Achizitii
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/achizitii-publice' )}} active {{/if}}" href="/achizitii-publice">Achizitii
                             publice</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/matemaraton' )}} active {{/if}}" href="/matemaraton">Cheltuili
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/cheltuieli-asociatie-parinti' )}} active {{/if}}"
+                            href="/cheltuieli-asociatie-parinti">Cheltuieli
                             asociatie parinti</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/biblioteca' )}} active {{/if}}" href="#">Rapoarte</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/biblioteca' )}} active {{/if}}" href="#">Anunturi</a>
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/rapoarte' )}} active {{/if}}" href="/rapoarte">Rapoarte</a>
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/anunturi' )}} active {{/if}}" href="/anunturi">Anunturi</a>
                     </div>
                 </li>
 
-                {{!-- <li class="nav-item">
-                    <a class="nav-link {{#if (eq selectedTopMenu '/matemaraton' )}} active {{/if}}" href="/matemaraton">MateMaraton</a>
-                </li> --}}
                 <li class="nav-item">
                     <a class="nav-link {{#if (eq selectedTopMenu '/contact' )}} active {{/if}}" href="/contact">Contact</a>
                 </li>
