--- a/server/src/web/views/matemaraton/presence-per-student.hbs
+++ b/server/src/web/views/matemaraton/presence-per-student.hbs
@@ -1,4 +1,7 @@
-<h1>Prezenta ({{student}})</h1>
+<h1>Prezenta</h1>
+<h2>{{student.shortName}}</h2>
+<h3 class="mb-5">Clasa a {{student.grade}}-a, {{student.groupName}}</h3>
+
 
 {{!-- <h2>{{presence.date}}</h2>
 <ul>
@@ -7,11 +10,27 @@
     {{/each}}
 </ul> --}}
 
+
 {{#each presencePerStudent}}
-<h2>{{date}}</h2>
-{{!-- <ul>
-    {{#each students}}
-    <li>{{name}} ({{class}})</li>
-    {{/each}}
-</ul> --}}
+<div class="mb-1">
+    <span style="display:inline-block; width:100px">{{dateAsString}}</span>
+    {{#if noCourse}}
+    <span class="text-muted"> - {{noCourseReason}}</span>
+    {{else}}
+
+    <span style="display:inline-block; width:80px">- Curs {{course}}:</span>
+    {{#if presence}} <span class="font-weight-bold">prezent</span>
+    {{else}}
+
+    <span class="font-weight-bold text-danger">absent</span>
+    {{/if}}
+
+    {{/if}}
+</div>
 {{/each}}
+
+<hr />
+<p class="mb-5">
+    <span class="font-weight-bold">Total prezente:</span> {{totals.totalPresences}} din {{totals.totalCourses}}
+    ({{totals.totalPresencesAsPercent}}%)
+</p>
