--- a/server/src/web/views/matemaraton/presence-per-group.hbs
+++ b/server/src/web/views/matemaraton/presence-per-group.hbs
@@ -8,6 +8,15 @@
     }
 </style>
 
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        {{!-- <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li> --}}
+        <li class="breadcrumb-item"><a href="#">Acasa</i></a></li>
+        <li class="breadcrumb-item"><a href="/matemaraton">MateMaraton</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Prezenta: 8-avansati</li>
+    </ol>
+</nav>
+
 <h1>Prezenta</h1>
 <h2 class="mb-5">Clasa a {{grade}}-a, {{groupName}}</h2>
 
