--- a/server/src/web/views/matemaraton/presence-per-student.hbs
+++ b/server/src/web/views/matemaraton/presence-per-student.hbs
@@ -1,3 +1,13 @@
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        {{!-- <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li> --}}
+        <li class="breadcrumb-item"><a href="#">Acasa</i></a></li>
+        <li class="breadcrumb-item"><a href="/matemaraton">MateMaraton</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Prezenta: {{student.shortName}}</li>
+    </ol>
+</nav>
+
+
 <h1>Prezenta</h1>
 <h2>{{student.shortName}}</h2>
 <h3 class="mb-5">Clasa a {{student.grade}}-a, {{student.groupName}}</h3>
