add courses - wip [skip ci]

--- a/server/src/web/views/matemaraton/matemaraton.hbs
+++ b/server/src/web/views/matemaraton/matemaraton.hbs
@@ -9,15 +9,19 @@
 
 <h5>Prezenta</h5>
 <ul>
-    <li><a href="/matemaraton/prezenta/8-avansati">Cls 8 - Avansati</a></li>
-    <li><a href="/matemaraton/prezenta/8-incepatori">Cls 8 - Incepatori</a></li>
-    <li><a href="/matemaraton/prezenta/5-avansati">Cls 5 - Avansati</a></li>
+    <li><a href="/matemaraton/prezenta/grupe/8-avansati">Cls 8 - Avansati</a></li>
+    <li><a href="/matemaraton/prezenta/grupe/8-incepatori">Cls 8 - Incepatori</a></li>
+    <li><a href="/matemaraton/prezenta/grupe/5-avansati">Cls 5 - Avansati</a></li>
 
 </ul>
-{{!-- <ul>
-    <li><a href="https://drive.google.com/open?id=1nNICJVOqnx2W_vDOURwM6Xyl-pgVOWiq9V7LQEg-pC4"
-            target="_blank">Centralizator prezente</a></li>
-</ul> --}}
+
+<h5>Cursuri <span class="font-weight-light text-secondary">(poze de pe tabla)</span></h5>
+<ul>
+    <li><a href="/matemaraton/cursuri/grupe/8-avansati">Cls 8 - Avansati</a></li>
+    <li><a href="/matemaraton/cursuri/grupe/8-incepatori">Cls 8 - Incepatori</a></li>
+    <li><a href="/matemaraton/cursuri/grupe/5-avansati">Cls 5 - Avansati</a></li>
+
+</ul>
 
 <h5>Link-uri utile:</h5>
 <ul>
