--- a/server/src/web/views/matemaraton/courses-per-group.hbs
+++ b/server/src/web/views/matemaraton/courses-per-group.hbs
@@ -13,15 +13,15 @@
         {{!-- <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li> --}}
         <li class="breadcrumb-item"><a href="#">Acasa</i></a></li>
         <li class="breadcrumb-item"><a href="/matemaraton">MateMaraton</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Prezenta: {{grade}}-{{groupName}}</li>
+        <li class="breadcrumb-item active" aria-current="page">Cursuri: {{grade}}-{{groupName}}</li>
     </ol>
 </nav>
 
-<h1>Prezenta</h1>
+<h1>Cursuri</h1>
 <h2 class="mb-5">Clasa a {{grade}}-a, {{groupName}}</h2>
 
 
-{{#each presencePerGroups}}
+{{#each coursesPerGroups}}
 <div {{#if (gt @index 2)}} class="toggle-presence hidePresence" {{/if}}>
 
     <h3 {{#if noCourse}} class="text-muted" {{/if}}>{{dateAsString}} {{#if course}}- curs {{course}} {{/if}}</h3>
@@ -29,48 +29,33 @@
     {{#if noCourse}}
     <p style="padding-left:40px;" class="text-muted">Nu s-a tinut curs ({{noCourseReason}})</p>
     {{/if}}
+    <div>{{description}}</div>
 
-    <ul>
-        {{#each students}}
-        <li><a href="/matemaraton/prezenta/elevi/{{_id}}">{{shortName}}</a> ({{../grade}}{{class}})
-            {{#if (eq @../index 0)}}
-            {{!-- - {{totalPresencesAsPercent}}% --}}
-            - prezente: {{totalPresences}} din {{../../totalCourses}}
-            {{/if}}
+    {{#each images}}
+    <p>{{description}}</p>
+    <img src={{url}} class="img-fluid" alt="">
+
+
+    {{/each}}
+
+    {{!-- <ul>
+        {{#each images}}
+        <li>
+
+            <div>{{url}}</div>
+
+            <img src={{url}} class="img-fluid" alt="">
+
         </li>
         {{/each}}
-    </ul>
+    </ul> --}}
 </div>
 {{/each}}
 {{#if (gt totalCourses 3)}}
-<a class="toggle-presence" href="#" style="font-size:1.2rem; vertical-align: bottom;">Vezi toate prezentele <i
+<a class="toggle-presence" href="#" style="font-size:1.2rem; vertical-align: bottom;">Vezi toate cursurile <i
         class="fas fa-angle-double-right"></i></a>
 <a class="toggle-presence hidePresence" href="#" style="font-size:1.2rem; vertical-align: bottom;"><i
-        class="fas fa-angle-double-left"></i> Vezi doar primele prezente </a>
-{{/if}}
-
-
-<h3 class="mt-5">Cumulat pe elevi: </h3>
-
-{{#each presencePerStudents}}
-<div {{#if (gt @index 7)}} class="toggle-student hideStudent" {{/if}}>
-    <a href="/matemaraton/prezenta/elevi/{{_id}}">{{shortName}}</a> ({{grade}}{{class}}) - prezente: {{totalPresences}}
-    din
-    {{../totalCourses}} ({{totalPresencesAsPercent}}%)
-    <div class="progress mb-2">
-        <div class="progress-bar" role="progressbar" style="width: {{totalPresencesAsPercent}}%" aria-valuenow="25"
-            aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
-</div>
-{{/each}}
-
-{{#if (gt totalStudents 8)}}
-<div class="mb-5">
-    <a class="toggle-student" href="#" style="font-size:1.2rem">Vezi toti elevii <i
-            class="fas fa-angle-double-right"></i></a>
-    <a class="toggle-student hideStudent" href="#" style="font-size:1.2rem; vertical-align: bottom;"><i
-            class="fas fa-angle-double-left"></i> Vezi doar primii elevi </a>
-</div>
+        class="fas fa-angle-double-left"></i> Vezi doar primele cursuri </a>
 {{/if}}
 
 
