--- a/server/src/web/views/matemaraton/matemaraton.hbs
+++ b/server/src/web/views/matemaraton/matemaraton.hbs
@@ -23,19 +23,13 @@
 
 </ul>
 
-<h5>Link-uri utile:</h5>
+<h5>Materiale</h5>
 <ul>
-    {{!-- <li><a href="https://drive.google.com/open?id=1nNICJVOqnx2W_vDOURwM6Xyl-pgVOWiq9V7LQEg-pC4"
-            target="_blank">Prezenta</a> (centralizator)</li> --}}
-    <li><a href="https://drive.google.com/open?id=1-ULAisYs-EgeclkOuFSZpDO00yxPVP7qUnLtoY6DVrw"
-            target="_blank">Cursuri</a> (poze de pe tabla)</li>
-    <li><a href="https://www.facebook.com/matemaraton" target="_blank">Facebook</a> (nu necesita cont)</li>
     <li><a href="/matemaraton/pregatire-simulare-en">Programul si materialele folosite pt. pregatirea simularii EN</a>
-        (sem.2)</li>
-</ul>
-
-<h5>Vechi:</h5>
-<ul>
+        (cls.8, sem.2)</li>
+    <li><a href="https://drive.google.com/open?id=1f-pmO9J0dlvaNaoPHnDvEotK91HTAsAeXTkjTWUcEdY"
+            target="_blank">Programul
+            si materialele folosite pt. pregatirea tezei</a> (cls.8, sem.1)</li>
     <li><a href=" https://drive.google.com/open?id=12NknbAonWK2lffp0NC7dSowp0ij9Q4pwgfmCfV3h4mk"
             target="_blank">Planificare
             materie</a>
@@ -46,30 +40,32 @@
     <li><a href="https://drive.google.com/open?id=1eXbk_yqioy2K-jHwgwoHMd7cbJk_PW_SMXV8t787Hzo" target="_blank">Teme
             propuse</a>
         (pt. acasa, sem.1)</li>
-    <li><a href="https://drive.google.com/open?id=1f-pmO9J0dlvaNaoPHnDvEotK91HTAsAeXTkjTWUcEdY"
-            target="_blank">Programul
-            si materialele folosite pt. pregatirea tezei</a> (sem.1)</li>
 </ul>
-<br>
-<h3>Editia 1 (2017-18)</h3>
 
+<h5>Orar:</h5>
 <ul>
-    <li><a href="https://drive.google.com/open?id=1B7tPDyBxGRLZf-0Y-RqJea2D-T3BWRnsort-6HdiAbE"
-            target="_blank">Descrierea proiectului</a></li>
-    <li><a href="https://drive.google.com/open?id=14uaY1s7qRvZyKp0ggIeKAdL6BSYVr7REHQaCbnGvvTk"
-            target="_blank">Activitatea si prezenta - etapa de incalzire </a> (primele 4 saptamani)</li>
-    <li><a href="https://drive.google.com/open?id=1Tw3d2_Zu7BPXNkx-UE8Tj1k-q8hCkEpqnXGh53yoytE"
-            target="_blank">Activitatea si prezenta - etapa de anduranta</a></li>
-    <li><a href="https://drive.google.com/open?id=1CGs-szeqDIu8nrFKWz6GoktLREZo5OcYAP8tzwT-0r0"
-            target="_blank">Activitatea si prezenta - etapa de sprint</a> (ultimele 6 saptamani)</li>
-    <li><a href="https://drive.google.com/open?id=1mMyUq4VKS1d_ZmWtidOdhooaH9szBncmTSKBmQ0KZUU" target="_blank">Analiza
-            si concluzii</a></li>
+    <li>Cls 8 - Avansati: 09 - 11</li>
+    <li>Cls 8 - Incepatori: 11 - 12</li>
+    <li>Cls 5 - Avansati: 12 - 13:30</li>
 </ul>
-<h5>Absolventii MateMaraton, Editia 1:</h5>
-<p>Amalia, Alexandra, Denis, Nicoleta, Iustin, Andi</p>
-<img src="https://scontent.fomr1-1.fna.fbcdn.net/v/t1.0-9/42334844_417862868746926_1502520787255427072_o.jpg?_nc_cat=100&_nc_ht=scontent.fomr1-1.fna&oh=4216fd319b588a8d5727f2ee94cd5a41&oe=5CE29F87"
-    class="img-fluid" alt="Absolventi MateMaraton Editia1">
-<p>O poza facuta cu cateva zile inainte de EN, la sfarsitul ultimei ore de curs. Lipseste Andi.</p>
+<p style="padding-left:40px">Cursurile se tin in fiecare sambata, la Scoala 21, Tm.</p>
+
+<h5>Instructor:</h5>
+<ul>
+    <li>ing. Lucian Maran</li>
+    <li>lucian.maran@gmail.com</li>
+    <li><a href="https://www.facebook.com/matemaraton" target="_blank">facebook.com/matemaraton</a> (nu
+        necesita cont)</li>
+    <li><a href="https://matemaraton-editia2.slack.com" target="_blank">matemaraton-editia2.slack.com</a> (acces pe baza
+        de invitatie)</li>
+</ul>
+
+<h5>Editii anterioare:</h5>
+<ul>
+    <li><a href="/matemaraton/editia-1">Editia 1</a> (2017 - 2018)</li>
+
+</ul>
+
 
 {{#section 'script'}}
 <script defer src="https://use.fontawesome.com/releases/v5.6.3/js/all.js"
