--- a/server/src/web/views/class/classes.hbs
+++ b/server/src/web/views/class/classes.hbs
@@ -12,9 +12,9 @@
     {{#each classes }}
     <li><span class="font-weight-bold">{{name}}</span>, diriginte {{classTeacher.name}}
         <div class="mb-3">
-            <a href="#">elevi</a> |
+            <a href="/clase/{{_id}}/elevi">elevi</a> |
             <a href="/clase/{{_id}}/profesori">profesori</a> |
-            <a href="#">orar</a>
+            <a href="/clase/{{_id}}/orar">orar</a>
         </div>
     </li>
     {{/each}}
