--- a/server/src/web/views/class/class-timetable.hbs
+++ b/server/src/web/views/class/class-timetable.hbs
@@ -1,1 +1,48 @@
-Orarul clasei: in curand
+<style>
+    .table td {
+        padding-top: 0.4rem;
+        padding-bottom: 0.4rem;
+    }
+
+    .table thead {
+        background-color: #f3f3f3;
+    }
+</style>
+
+<h1>Clasa {{class.shortName}}</h1>
+<h2>Diriginte: {{class.classTeacher.name}}</h2>
+<h3 class="mt-4">Orarul clasei:</h3>
+
+<div class="container-flui">
+    <div class="row">
+        {{#each lessonsPerDay}}
+        <div class="col-md-4">
+
+            <table class="table thead-light table-bordered table-light2 table-hover mb-5">
+                <thead>
+                    <tr>
+                        <th colspan="2">{{day}}</th>
+
+                    </tr>
+                </thead>
+                <tbody>
+                    {{#each lessonsPerHour}}
+                    <tr>
+                        <td>{{hour.start}}</td>
+                        <td>
+                            <div class="font-weight-bold2">{{lesson.subject.name}}</div>
+                            <div><a href="/profesori/{{lesson.teacher.id}}">{{lesson.teacher.name}}</a></div>
+                        </td>
+                    </tr>
+                    {{/each}}
+                </tbody>
+            </table>
+
+
+
+
+
+        </div>
+        {{/each}}
+    </div>
+</div>
