--- a/server/src/web/views/teacher/teacher-timetable.hbs
+++ b/server/src/web/views/teacher/teacher-timetable.hbs
@@ -9,9 +9,8 @@
     }
 </style>
 
-<h1>Clasa {{class.shortName}}</h1>
-<h2>Diriginte: {{class.classTeacher.name}}</h2>
-<h3 class="mt-4">Orarul clasei:</h3>
+<h1>{{teacher.firstName}} {{teacher.lastName}}</h1>
+<h3 class="mt-4">Orar:</h3>
 
 <div class="container-flui">
     <div class="row">
@@ -21,38 +20,42 @@
             <table class="table thead-light table-bordered table-light2 table-hover mb-5">
                 <thead>
                     <tr>
-                        <th colspan="2">{{day}}</th>
+                        <th colspan="3">{{day}}</th>
 
                     </tr>
                 </thead>
                 <tbody>
+                    {{#if noLessonsPerDay}}
+                    <tr>
+                        <td colspan="3">Nu are ore</td>
+                    </tr>
+                    {{else}}
                     {{#each lessonsPerHour}}
                     <tr>
                         <td style="width: 20%">{{hour.start}}</td>
                         <td>
                             {{#if lesson}}
 
-                            <div>{{lesson.subject.name}}</div>
-                            <div><a href="/profesori/{{lesson.teacher.id}}">{{lesson.teacher.name}}</a></div>
+                            <div><a href="/clase/{{lesson.class.id}}">{{lesson.class.name}}</a> -
+                                {{lesson.subject.name}}</div>
 
                             {{else if lessonsPerWeek}}
 
                             {{#each lessonsPerWeek}}
-                            <div>{{lesson.subject.name}} <span class="text-secondary">(sapt. {{week}})</span>
+                            {{#if lesson}}
+                            <div><a href="/clase/{{lesson.class.id}}">{{lesson.class.name}}</a> -
+                                {{lesson.subject.name}} <span class="text-secondary">(sapt. {{week}})</span>
                             </div>
-                            <div><a href="/profesori/{{lesson.teacher.id}}">{{lesson.teacher.name}}</a></div>
+                            {{/if}}
                             {{/each}}
 
                             {{/if}}
                         </td>
                     </tr>
                     {{/each}}
+                    {{/if}}
                 </tbody>
             </table>
-
-
-
-
 
         </div>
         {{/each}}
