--- a/server/src/web/views/teacher/teacher.hbs
+++ b/server/src/web/views/teacher/teacher.hbs
@@ -3,21 +3,15 @@
 <h3 class="font-weight-light">Profesor {{teacher.degree}}{{#if teacher.holder}}, titular{{/if}}</h3>
 <h4 class="font-weight-light">{{teacher.subject}}</h4>
 
-<h5 class="mt-4 font-weight-light2">Clase la care preda:</h5>
+<h5 class="mt-4">Clase la care preda:</h5>
 
 <h5 class="font-weight-light">
     {{#each uniqueClasses }}
-    <a href="/clase/{{id}}">{{name}}</a>{{#unless @last}},{{/unless}}
+    <a href="/clase/{{id}}">{{name}}</a>{{#unless @last}}<span class="mr-2">,</span>{{/unless}}
     {{/each}}
 </h5>
-{{!-- <ol>
-    {{#each lessons }}
-    <li><span class="font-weight-bold">{{teacher.name}}</span>, {{subject.name}}
-        <div class="mb-3">
-            <a href="#">elevi</a> |
-            <a href="/clase/{{_id}}/profesori">profesori</a> |
-            <a href="#">orar</a>
-        </div>
-    </li>
-    {{/each}}
-</ol> --}}
+
+<h5 class="mt-4">Zile in care preda:<span></span></h5>
+<h5 class="font-weight-light">
+    <a href="/profesori/{{teacher._id}}/orar">Orar</a>
+</h5>
