--- a/server/src/web/views/class/class-students.hbs
+++ b/server/src/web/views/class/class-students.hbs
@@ -1,1 +1,14 @@
-Elevii clasei: in curand
+<h1>Clasa {{class.shortName}}</h1>
+<h2>Diriginte: {{class.classTeacher.name}}</h2>
+<h3 class="mt-4">Elevii clasei:</h3>
+<ol>
+    {{#each students }}
+    <li class="mt-1"><a href="/elevi/{{_id}}">{{lastName}} {{firstName}}</a>
+        {{!-- <div class="mb-3">
+            <a href="#">elevi</a> |
+            <a href="/clase/{{_id}}/profesori">profesori</a> |
+            <a href="#">orar</a>
+        </div> --}}
+    </li>
+    {{/each}}
+    </ul>
