--- a/server/src/web/views/class/classes.hbs
+++ b/server/src/web/views/class/classes.hbs
@@ -5,12 +5,18 @@
     </ol>
 </nav> --}}
 
-<h1>Clase in gimnaziu</h1>
+<h1>Clase</h1>
 {{#each classesByGrade}}
+{{#if (or 
+    (eq grade.name "0") (eq grade.name "1"))}}
+<h2>Clasa {{grade.name}}</h2>
+{{else}}
 <h2>Clasa a {{grade.name}}-a</h2>
+{{/if}}
 <ul>
     {{#each classes }}
-    <li><span class="font-weight-bold">{{name}}</span>, diriginte {{classTeacher.name}}
+    <li><span class="font-weight-bold">{{name}}</span>, {{#if (gt grade.name "4")}}diriginte{{else}}invatator{{/if}}
+        {{classTeacher.name}}
         <div class="mb-3">
             <a href="/clase/{{_id}}/elevi">elevi</a> |
             <a href="/clase/{{_id}}/profesori">profesori</a> |
