address some particularities of primary classes

--- a/server/src/web/views/class/class-students.hbs
+++ b/server/src/web/views/class/class-students.hbs
@@ -1,5 +1,5 @@
 <h1>Clasa {{class.shortName}}</h1>
-<h2>Diriginte: {{class.classTeacher.name}}</h2>
+<h2>{{#if (gt grade.name "4")}}Diriginte{{else}}Invatator{{/if}}: {{class.classTeacher.name}}</h2>
 <h3 class="mt-4">Elevii clasei:</h3>
 <ol>
     {{#each students }}
