--- a/server/src/web/views/teacher/teacher.hbs
+++ b/server/src/web/views/teacher/teacher.hbs
@@ -3,6 +3,13 @@
 <h3 class="font-weight-light">Profesor {{teacher.degree}}{{#if teacher.holder}}, titular{{/if}}</h3>
 <h4 class="font-weight-light">{{teacher.subject}}</h4>
 
+{{#if (eq teacher.area "Invatamant primar")}}
+<h5 class="mt-4">Clasa la care preda:
+    {{#if teacherClass}}
+    <a href="/clase/{{teacherClass.id}}">{{teacherClass.name}}</a>
+    {{/if}}
+</h5>
+{{else}}
 <h5 class="mt-4">Clase la care preda:</h5>
 
 <h5 class="font-weight-light">
@@ -15,3 +22,4 @@
 <h5 class="font-weight-light">
     <a href="/profesori/{{teacher._id}}/orar">Orar</a>
 </h5>
+{{/if}}
