--- a/server/src/web/views/class/class-students.hbs
+++ b/server/src/web/views/class/class-students.hbs
@@ -3,7 +3,7 @@
 <h3 class="mt-4">Elevii clasei:</h3>
 <ol>
     {{#each students }}
-    <li class="mt-1"><a href="/elevi/{{_id}}">{{lastName}} {{firstName}}</a>
+    <li class="mt-1"><a href="/elevi/{{_id}}">{{lastName}} {{allFirstNames}}</a>
         {{!-- <div class="mb-3">
             <a href="#">elevi</a> |
             <a href="/clase/{{_id}}/profesori">profesori</a> |
