--- a/server/src/web/views/partials/navbar.hbs
+++ b/server/src/web/views/partials/navbar.hbs
@@ -22,20 +22,7 @@ if 2 similar sections are used, the last one will override the first one --}}
                     </a>
                 </li> --}}
 
-                {{!-- <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        Despre
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/repere-istorice' )}} active {{/if}}" href="/repere-istorice">Repere
-                            istorice</a>
-                        <a class="dropdown-item {{#if (eq selectedTopMenu '/elevi-de-prestigiu' )}} active {{/if}}"
-                            href="/elevi-de-prestigiu">Elevi de prestigiu</a>
-
-                    </div>
-                </li> --}}
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -100,7 +87,7 @@ if 2 similar sections are used, the last one will override the first one --}}
                     </a>
                 </li> --}}
 
-                <li class="nav-item dropdown">
+                {{!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Echipa
@@ -110,7 +97,7 @@ if 2 similar sections are used, the last one will override the first one --}}
                             href="/profesori">Profesori
                         </a>
                         <a class="dropdown-item" href="/personal-auxiliar">Personal auxiliar</a>
-                        {{!-- <a class="dropdown-item" href="#">Personal nedidactic</a> --}}
+                        <a class="dropdown-item" href="#">Personal nedidactic</a>
                         <div class="dropdown-divider"></div>
 
                         <a class="dropdown-item {{#if (eq selectedTopMenu '/conducere' )}} active {{/if}}"
@@ -118,10 +105,10 @@ if 2 similar sections are used, the last one will override the first one --}}
                             manageriala
                         </a>
 
-                        {{!-- <a class="dropdown-item" href="#">Consiliul de administratie</a> --}}
-                        {{!-- <a class="dropdown-item" href="/comisii">Comisii</a> --}}
+                        <a class="dropdown-item" href="#">Consiliul de administratie</a>
+                        <a class="dropdown-item" href="/comisii">Comisii</a>
                     </div>
-                </li>
+                </li> --}}
 
                 {{!-- <li class="nav-item">
                     <a class="nav-link {{#if (eq selectedTopMenu '/conducere' )}} active {{/if}}" href="/conducere">Conducere
@@ -154,6 +141,12 @@ if 2 similar sections are used, the last one will override the first one --}}
                 </li> --}}
 
                 <li class="nav-item">
+                    <a class="nav-link {{#if (eq selectedTopMenu '/profesori' )}} active {{/if}}"
+                        href="/profesori">Profesori
+                    </a>
+                </li>
+
+                <li class="nav-item">
                     <a class="nav-link {{#if (eq selectedTopMenu '/clase' )}} active {{/if}}" href="/clase">Clase</a>
                 </li>
 
@@ -165,8 +158,7 @@ if 2 similar sections are used, the last one will override the first one --}}
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
                         <a class="dropdown-item {{#if (eq selectedTopMenu '/revista-scolii' )}} active {{/if}}"
-                            href="/revista-scolii">Revista
-                            scolii</a>
+                            href="/revista-scolii">Revista scolii</a>
                         {{!-- <a class="dropdown-item {{#if (eq selectedTopMenu '/eco-scoala' )}} active {{/if}}"
                             href="/eco-scoala">Eco
                             Scoala</a>
@@ -200,6 +192,30 @@ if 2 similar sections are used, the last one will override the first one --}}
                             href="/anunturi">Anunturi</a>
                     </div>
                 </li> --}}
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Despre
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+                        {{!-- <a class="dropdown-item {{#if (eq selectedTopMenu '/repere-istorice' )}} active {{/if}}" href="/repere-istorice">Repere
+                            istorice</a>
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/elevi-de-prestigiu' )}} active {{/if}}"
+                            href="/elevi-de-prestigiu">Elevi de prestigiu</a> --}}
+
+                        <a class="dropdown-item {{#if (eq selectedTopMenu '/conducere' )}} active {{/if}}"
+                            href="/conducere">Echipa manageriala
+                        </a>
+                        <a class="dropdown-item" href="/personal-auxiliar">Personal auxiliar</a>
+                        {{!-- <a class="dropdown-item" href="#">Personal nedidactic</a> --}}
+                        {{!-- <div class="dropdown-divider"></div> --}}
+
+
+
+                    </div>
+                </li>
 
                 <li class="nav-item">
                     <a class="nav-link {{#if (eq selectedTopMenu '/contact' )}} active {{/if}}"
