implement user login (wip)

--- a/server/src/web/views/contact/contact.hbs
+++ b/server/src/web/views/contact/contact.hbs
@@ -24,8 +24,7 @@
         });
     }
 </script>
-<script async defer src='//maps.googleapis.com/maps/api/js?key=AIzaSyD6xK-AizMittXaPXgteIh3F3mS5XXbxoA&&callback=initMap'
+<script async defer
+    src='//maps.googleapis.com/maps/api/js?key=AIzaSyD6xK-AizMittXaPXgteIh3F3mS5XXbxoA&&callback=initMap'
     type="text/javascript"></script>
-<script defer src="https://use.fontawesome.com/releases/v5.6.3/js/all.js" integrity="sha384-EIHISlAOj4zgYieurP0SdoiBYfGJKkgWedPHH4jCzpCXLmzVsw1ouK59MuUtP4a1"
-    crossorigin="anonymous"></script>
 {{/section}}
