--- a/server/src/web/views/partials/navbar.hbs
+++ b/server/src/web/views/partials/navbar.hbs
@@ -222,6 +222,58 @@ if 2 similar sections are used, the last one will override the first one --}}
                         href="/contact">Contact</a>
                 </li>
             </ul>
+
+            {{!-- <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link">Right Link 1</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Dropdown on Right</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action with a lot of text inside of an item</a>
+                    </div>
+                </li>
+            </ul> --}}
+
+            {{#unless user.activationToken}} {{!do not display this part during user activation}}
+            <ul class='navbar-nav ml-auto'>
+                {{#if user}}
+                {{#if user.isAdmin}}
+                <li class="nav-item"><a class="nav-link" href='/admin'>Admin</a></li>
+                {{/if}}
+                {{#if user.isPartner}}
+                <li class="nav-item"><a class="nav-link" href='/admin'>Admin</a></li>
+                {{/if}}
+                <li class="nav-item dropdown">
+                    <a class='dropdown-item' href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        <!--<img src='//www.gravatar.com/avatar/6f137572059f8c0f23363e8678d7a795' width="20" height="20">-->
+                        {{user.name}}
+                        {{!-- <b class='caret'></b> --}}
+                    </a>
+                    {{!-- <ul class="dropdown-menu">
+                        <li><a href='/changePassword'>Schimba parola</a></li>
+                        <li><a href='/logout'>Log out</a></li>
+                    </ul> --}}
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/changePassword">Schimba parola</a>
+                        <a class="dropdown-item" href="/logout">Log out</a>
+                    </div>
+                </li>
+                {{else}}
+                <li class="nav-item">
+                    <a class="nav-link" href='/register'>Cont nou</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href='/login'>Login</a>
+                </li>
+                {{/if}}
+
+            </ul>
+            {{/unless}}
+
         </div>
     </div>
 </nav>
