--- a/server/src/web/views/layouts/main.hbs
+++ b/server/src/web/views/layouts/main.hbs
@@ -46,6 +46,7 @@
     {{> navbar ctx }}
 
     <main role="main" class="container">
+        {{!toJson ctx}}
         {{{body}}}
     </main>
 </body>
