--- a/server/src/web/views/partials/navbar.hbs
+++ b/server/src/web/views/partials/navbar.hbs
@@ -247,8 +247,8 @@ if 2 similar sections are used, the last one will override the first one --}}
                 <li class="nav-item"><a class="nav-link" href='/admin'>Admin</a></li>
                 {{/if}}
                 <li class="nav-item dropdown">
-                    <a class='dropdown-item' href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
+                    <a class='nav-link dropdown-toggle' href="#" id="navbarDropdown2" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <!--<img src='//www.gravatar.com/avatar/6f137572059f8c0f23363e8678d7a795' width="20" height="20">-->
                         {{user.name}}
                         {{!-- <b class='caret'></b> --}}
