--- a/server/src/web/views/user/changePassword.hbs
+++ b/server/src/web/views/user/changePassword.hbs
@@ -1,7 +1,5 @@
-{{> navbar}}
-
 <div class="container-fluid">
-    
+
     <h1>Schimba parola</h1>
 
     <form action="/me/changepassword" method="post" class="form-horizontal">
@@ -10,22 +8,24 @@
         <div class="form-group">
             <label class="col-md-2 control-label">Parola veche</label>
             <div class="col-md-4">
-                <input type="password" name="oldPassword" class="form-control" autofocus/>
+                <input type="password" name="oldPassword" class="form-control" autofocus />
             </div>
         </div>
-        
+
         <div class="form-group">
             <label class="col-md-2 control-label">Parola noua</label>
             <div class="col-md-4">
-                <input type="password" name="newPassword" class="form-control"/>
+                <input type="password" name="newPassword" class="form-control" />
                 <p class="text-muted">Minim 6 caractere.</p>
             </div>
-        </div>            
+        </div>
 
         <div class="form-group">
             <div class="col-md-10 col-md-offset-2">
-                <button type="submit" class="btn btn-primary"> <span class="glyphicon glyphicon-floppy-disk"></span> Salveaza</button>
-                <button type="button" class="btn btn-default" onclick='window.history.back();'> <span class=" glyphicon glyphicon-remove"></span> Renunta</button>
+                <button type="submit" class="btn btn-primary"> <span class="glyphicon glyphicon-floppy-disk"></span>
+                    Salveaza</button>
+                <button type="button" class="btn btn-default" onclick='window.history.back();'> <span
+                        class=" glyphicon glyphicon-remove"></span> Renunta</button>
             </div>
         </div>
 
@@ -37,5 +37,5 @@
     <!--<p>
         Nu ai inca un cont? <a href="/register">Inregistreaza-te!</a>
     </p>-->
-    
+
 </div>
