--- a/server/src/web/views/student/student.hbs
+++ b/server/src/web/views/student/student.hbs
@@ -8,7 +8,7 @@
     </ol>
 </nav>
 
-<h1>{{student.lastName}} {{student.allFirstNames}} </h1>
+<h1>{{student.lastName}} {{student.firstName}} </h1>
 
 <h5 class="mt-4">Clasa
     <a href="/clase/{{student.class.id}}">{{student.class.name}}</a>
