--- a/server/src/web/views/class/class-students.hbs
+++ b/server/src/web/views/class/class-students.hbs
@@ -7,14 +7,14 @@
     </ol>
 </nav>
 
-<h1>Clasa {{class.shortName}}</h1>
-<h4>{{#if (gt class.grade.name "4")}}Diriginte{{else}}Invatator{{/if}}:
+<h1>Clasa {{class.name}}</h1>
+<h4>{{#if (gt class.grade "4")}}Diriginte{{else}}Invatator{{/if}}:
     <a class="font-weight-light" href="/profesori/{{class.classTeacher.id}}">{{class.classTeacher.name}}</a>
 </h4>
 <h3 class="mt-4">Elevii clasei:</h3>
 <ol>
     {{#each students }}
-    <li class="mt-1"><a href="/elevi/{{_id}}">{{lastName}} {{allFirstNames}}</a>
+    <li class="mt-1"><a href="/elevi/{{_id}}">{{lastName}} {{firstName}}</a>
         {{!-- <div class="mb-3">
             <a href="#">elevi</a> |
             <a href="/clase/{{_id}}/profesori">profesori</a> |
