--- a/server/src/web/views/class/class.hbs
+++ b/server/src/web/views/class/class.hbs
@@ -7,13 +7,13 @@
 </nav>
 
 <h1>Clasa {{class.name}}</h1>
-<h4>{{#if (gt class.grade.name "4")}}Diriginte{{else}}Invatator{{/if}}:
+<h4>{{#if (gt class.grade "4")}}Diriginte{{else}}Invatator{{/if}}:
     <a class="font-weight-light" href="/profesori/{{class.classTeacher.id}}">{{class.classTeacher.name}}</a>
 </h4>
 
 <h5 class="mt-4 font-weight-light">
     <a href="/clase/{{class._id}}/elevi">elevi</a>
-    {{#if (gt class.grade.name "4")}}
+    {{#if (gt class.grade "4")}}
     |
     <a href="/clase/{{class._id}}/profesori">profesori</a> |
     <a href="/clase/{{class._id}}/orar">orar</a>
