--- a/server/src/web/views/class/classes.hbs
+++ b/server/src/web/views/class/classes.hbs
@@ -8,19 +8,19 @@
 <h1>Clase</h1>
 {{#each classesByGrade}}
 {{#if (or 
-    (eq grade.name "0") (eq grade.name "1"))}}
-<h2>Clasa {{grade.name}}</h2>
+    (eq grade "0") (eq grade "1"))}}
+<h2>Clasa {{grade}}</h2>
 {{else}}
-<h2>Clasa a {{grade.name}}-a</h2>
+<h2>Clasa a {{grade}}-a</h2>
 {{/if}}
 <ul>
     {{#each classes }}
     <li><span class="font-weight-bold"><a href="/clase/{{_id}}">{{name}}</a></span>,
-        {{#if (gt grade.name "4")}}diriginte{{else}}invatator{{/if}}
+        {{#if (gt grade "4")}}diriginte{{else}}invatator{{/if}}
         {{classTeacher.name}}
         <div class="mb-3">
             <a href="/clase/{{_id}}/elevi">elevi</a>
-            {{#if (gt grade.name "4")}}
+            {{#if (gt grade "4")}}
             |
             <a href="/clase/{{_id}}/profesori">profesori</a> |
             <a href="/clase/{{_id}}/orar">orar</a>
